# wasm-rt-test

./: Cargo.toml  README.md  aot-test-app.wasm
gen-aot-from-test-app/: Cargo.toml
gen-aot-from-test-app/src/: main.rs
rt-wasmedge/: Cargo.toml
rt-wasmedge-aot/: Cargo.toml
rt-wasmedge-aot/src/: main.rs
rt-wasmedge-async/: Cargo.toml
rt-wasmedge-async-aot/: Cargo.toml
rt-wasmedge-async-aot/src/: main.rs
rt-wasmedge-async/src/: main.rs
rt-wasmedge/src/: main.rs
rt-wasmer/: Cargo.toml
rt-wasmer/src/: main.rs
rt-wasmtime/: Cargo.toml
rt-wasmtime/src/: main.rs
test-app/src/: main.rs
