[package]
edition = "2021"
name = "rt-wasmer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.3.0"
wasmer-compiler-cranelift = {version = "2.3.0"}
wasmer-engine-universal = {version = "2.3.0"}
wasmer-wasi = {version = "2.3.0"}
