[package]
edition = "2021"
name = "rt-wasmtime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.66"}
tokio = {version = "1", features = ["full"]}
wasmtime = {version = "2.0.1"}
wasmtime-wasi = {version = "2.0.1", features = ["tokio"]}
